--- a/Exersises/API/SmalProject/style.CSS
+++ b/Exersises/API/SmalProject/style.CSS
@@ -19,7 +19,36 @@ td
     background-color: black;
     margin-left: 30%;
     margin-right: 30%;
-    margin-top: 200px;
+    margin-top: 5%;
+}
+
+#prev{
+    position: absolute;
+    left: 10px;
+    top: 50%;
+}
+
+#next{
+    position: absolute;
+    right: 10px;
+    top: 50%;
+}
+#prev2{
+    position: absolute;
+    left: 10px;
+    top: 50%;
+}
+
+#next2{
+    position: absolute;
+    right: 10px;
+    top: 50%;
+}
+
+nav{
+    position: relative;
+    display: block;
+    margin: auto;
 }
 
 #MainTable
@@ -27,7 +56,7 @@ td
     text-align: center;
     justify-content: center;
     margin: auto;
-    background-color: grey;
+    background-color: rgb(87, 87, 87);
 }
 
 #MainTable tr{
@@ -59,14 +88,23 @@ img{
 }
 .deleteButton
 {
-    background-color: red;
+    background-color: rgb(170, 40, 40);
     color: white;
     width: 75px;
+}
+.deleteButton:hover
+{
+    background-color: rgb(255, 0, 0);
 }
 
 .updateButton
 {
+    background-color: rgb(37, 138, 28);
     width: 75px;
+}
+.updateButton:hover
+{
+    background-color: rgb(14, 219, 14);
 }
 .name
 {
@@ -77,7 +115,7 @@ img{
     #backgroundImage {
         margin-left: 20%;
         margin-right: 20%;
-        margin-top: 20px;
+        margin-top: 2.5%;
     }
   }
 
@@ -86,7 +124,7 @@ img{
     #backgroundImage {
         margin-left: 10%;
         margin-right: 10%;
-        margin-top: 10px;
+        margin-top: 1.75%;
     }
   }
 
@@ -95,6 +133,69 @@ img{
     #backgroundImage {
         margin-left: 5%;
         margin-right: 5%;
-        margin-top: 5px;
+        margin-top: 1%;
     }
   }
+
+  .glow-on-hover {
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    text-align: center;
+    justify-content: center;
+    margin: auto;
+}
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:hover:before {
+    opacity: 1;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
