--- a/FullStackProject1(StudentsSystem)/style.CSS
+++ b/FullStackProject1(StudentsSystem)/style.CSS
@@ -12,6 +12,12 @@ h1
     color: white;
 }
 
+tr{
+    flex: 1;
+    justify-content: center;
+    order : 0;
+}
+
 td
 {
     color: white;
@@ -36,6 +42,11 @@ td
     backdrop-filter: blur(10px) brightness(0.5);
     /* background-color: blue;
     opacity: 50%; */
+}
+
+.FilterButton
+{
+    width:20px; height:20px; cursor: pointer;
 }
 
 #prev{
@@ -72,9 +83,22 @@ nav{
     display: none;
 }
 
+#MainTableGrades
+{
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    /* background-color: rgb(87, 87, 87); */
+
+    -webkit-backdrop-filter: blur(10px) grayscale(1);
+    backdrop-filter: blur(10px) grayscale(1);
+}
 #MainTable
 {
-    text-align: center;
+    align-items: center;
     justify-content: center;
     margin: auto;
     /* background-color: rgb(87, 87, 87); */
@@ -158,6 +182,7 @@ img{
     font-size: 150%;
     font-style: oblique;
     font-weight: bold;
+    cursor: pointer;
 }
 .info
 {
